--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-storybook": "^0.6.15",
+    "husky": "^9.0.10",
     "postcss": "^8",
     "storybook": "^7.6.12",
     "tailwindcss": "^3.3.0",
