--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@storybook/addon-links": "^7.6.12",
     "@storybook/addon-onboarding": "^1.0.11",
     "@storybook/blocks": "^7.6.12",
+    "@storybook/jest": "^0.2.3",
     "@storybook/nextjs": "^7.6.12",
     "@storybook/react": "^7.6.12",
     "@storybook/test": "^7.6.12",
+    "@storybook/testing-library": "^0.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
